# CheckMe_BLE_Demo

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ecg_respiration/: AF.cpp  AF.h  EcgDataType.h  EcgFilter.cpp  EcgFilter.h  EcgInterface.h  EcgMainProc.cpp  EcgMainProc.h  EcgQrsClassify.cpp  EcgQrsClassify.h  EcgQrsDetect.cpp  EcgQrsDetect.h  EcgResult.cpp  EcgResult.h  RespFinalResult.cpp  RespFinalResult.h  RespMain.cpp  RespMain.h  assistTools.cpp  assistTools.h
app/src/main/res/drawable/: button_circle_shape.xml  button_circle_shape_white.xml  ic_baseline_arrow_back_ios_24.xml  ic_baseline_article_24.xml  ic_baseline_info_24.xml  panel_bg.xml
app/src/main/res/drawable-v24/: ic_baseline_wb_sunny_24.xml
app/src/main/res/layout/: activity_main.xml  activity_permission.xml  app_bar_main.xml  ble_panel_view.xml  ble_scan_view.xml  fragment_about.xml  fragment_bp.xml  fragment_dailycheck.xml  fragment_ecg.xml  fragment_gallery.xml  fragment_glu.xml  fragment_home.xml  fragment_mydevice.xml  fragment_pedometer.xml  fragment_pulseoximeter.xml  fragment_sleepmonitor.xml  fragment_thermometer.xml  item_ble.xml  item_bp.xml  item_daily.xml  item_ecg.xml  item_glu.xml  item_oxy.xml  item_ped.xml  item_slm.xml  item_tmp.xml  item_user.xml  item_user_view.xml  item_wave.xml  nav_header_main.xml  right_drawer.xml  scan_view.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+142 files in other folders)
